save/import date-stamp overlap issue fixed / style changes for settings

--- a/css/main.css
+++ b/css/main.css
@@ -622,11 +622,13 @@ textarea {
     overflow: auto;
     overflow-x: scroll;
     white-space: nowrap;
-    border: 1px solid #1e1e1e;
+    /*border: 1px solid #1e1e1e;*/
     border-radius: 10px;
     padding-top: 20px;
     padding-bottom: 20px;
-    background-color: #f8f8f8;
+    /*background-color: #f8f8f8;*/
+    border-right: 1px solid #000;
+    border-left: 1px solid #000;
 }
 .rep-profiles {
     padding-left: 5px !important;
@@ -767,14 +769,16 @@ Duplicate Error Msgs
     padding-bottom: 50px;
 }
 .queue-profiles-wrapper {
-    border: 1px solid #1e1e1e;
+    /*border: 1px solid #1e1e1e;*/
     border-radius: 10px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    background-color: #f8f8f8;
+    /*padding-top: 20px;*/
+    padding-bottom: 10px;
+    /*background-color: #f8f8f8;*/
     max-width: 64em;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
+    border-left: 1px solid #000;
+    border-right: 1px solid #000;
 }
 .queue-profiles {
     padding-left: 5px !important;
@@ -1028,13 +1032,11 @@ Add New Queue
         border-left: none;
         border-right: none;
         border-radius: 0;
-        box-shadow: 0px 0px 5px #888888;
     }
     .queue-profiles-wrapper {
         border-left: none;
         border-right: none;
         border-radius: 0;
-        box-shadow: 0px 0px 5px #888888;
     }
     .queue-settings-container, .rep-settings-container {
         padding-top: 45px;
